[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Player/Bullets/SideBlast.gd" type="Script" id=1]
[ext_resource path="res://Assets/Bullets/GenericBullet/BulletInner.png" type="Texture" id=2]
[ext_resource path="res://Assets/Bullets/GenericBullet/BulletOuter.png" type="Texture" id=3]
[ext_resource path="res://Entities/Shared/Bullets/BlastTrailParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Shared/Bullets/BlastDeathParticles.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.62248, 5.63132 )

[node name="Bullet" type="Area2D"]
scale = Vector2( 1.9, 1.5 )
z_index = 100
collision_layer = 4
collision_mask = 40
script = ExtResource( 1 )
speed = 400.0

[node name="BulletColliderShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BulletInner" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="BulletOuter" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Lifetime" type="Timer" parent="."]
autostart = true

[node name="ParticleTrail" parent="." instance=ExtResource( 4 )]

[node name="DeathNodes" type="Node2D" parent="."]

[node name="BlastDeathParticles" parent="DeathNodes" instance=ExtResource( 5 )]

[node name="WaitAfterDeath" type="Timer" parent="DeathNodes"]

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="timeout" from="DeathNodes/WaitAfterDeath" to="." method="_on_WaitAfterDeath_timeout"]
